# portfolio_analytics

./: .gitignore  LICENSE  NORMALIZATION_SUMMARY.md  README.md  analytics.py  app.py  database.py  db.py  ingestion.py  main.py  menu.py  migration.py  normalization.py  playground.ipynb  portfolio.db  price_service.py  pyproject.toml  readme.md  reporting.py  requirements.txt  schema.sql  setup.sh  test_queries.py  transfers.py  utils.py  visualization.py
.cursor/rules/: 00-portfolio-analytics-overview.mdc  01-portfolio-analytics-overview.mdc  02-development-debugging.mdc  03-essential-commands.mdc  common-workflows.mdc  data-pipeline.mdc  debugging-troubleshooting.mdc  development-and-testing.mdc  development-commands.mdc  normalization-system.mdc  portfolio-analytics-complete.mdc  product-requirements-document.mdc  technical-implementation.mdc
.github/workflows/: ci.yml
app/: main.py  settings.py  valuation.py
app/analytics/: portfolio.py  returns.py
app/api/: __init__.py
app/db/: base.py  session.py
app/ingestion/: loader.py  normalization.py  transfers.py  update_positions.py
app/services/: price_service.py
app/valuation/: __init__.py  portfolio.py  reporting.py  visualization.py
config/: dashboard_config.json  schema_mapping.yaml
docs/: NORMALIZATION_IMPROVEMENTS.md  README.md  postgres_database_connection_guide.md  postgres_migration_plan.md
docs/development/: DEPLOYMENT_GUIDE.md  FINAL_CHECKLIST.md  STRUCTURE_MIGRATION.md  portfolio-metrics-implementation-plan.md
docs/project-management/: DASHBOARD_COMPLETION_SUMMARY.md  DASHBOARD_IMPROVEMENTS.md  FEATURE_ROADMAP.md  MIGRATION_SUMMARY.md  NEXT_STEPS_ROADMAP.md  PERFORMANCE_SUMMARY.md  STRUCTURE_REORGANIZATION_SUMMARY.md
documentation/: MIGRATION_SUMMARY.md
notebooks/: coinbase_transfer.ipynb
pages/: 1_Tax_Reports.py  Asset_Analysis.py  Tax_Reports.py  Transfers.py
scripts/: analytics.py  benchmark_dashboard.py  check_gemini.py  check_prices.py  check_raw_types.py  cli.py  demo_dashboard.py  final_polish.py  ingestion.py  migrate.sh  migration.py  normalization.py  run_data_quality_tests.py  simple_benchmark.py  test_normalization.py  transfers.py  visualize_prices.py
scripts/analysis/: README.md  analyze_data.py  analyze_eth_balance.py  analyze_filtered_eth.py  analyze_portfolio_assets.py
scripts/debug/: README.md  debug_holdings_calculation.py  debug_portfolio_issues.py  debug_price_data.py
scripts/testing/: README.md  test_portfolio_cleaned.py
tests/: conftest.py  test_api_endpoints.py  test_cost_basis.py  test_data_quality.py  test_enhanced_price_service.py  test_ingestion.py  test_migration.py  test_normalization.py  test_normalization_comprehensive.py  test_portfolio.py  test_portfolio_integration.py  test_portfolio_returns_with_real_data.py  test_portfolio_simple.py  test_position_daily.py  test_position_engine.py  test_price_service.py  test_returns_library.py  test_transfers.py
tests/unit/: test_2024_transactions.py
ui/: streamlit_app.py  streamlit_app_v2.py
ui/components/: Home.py  charts.py  menu.py  metrics.py
